@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2004 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2005 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -87,5 +87,7 @@ Changes from NetBSD 7.0 to NetBSD 8.0:
 		sources (be more power friendly). [tls 20141026]
 	rnd(9): Make "skew" source polled so it runs only when there
 	        is entropy demand. [tls 20141026]
-	rnd(9): Adjust entropy collection from polled sources so it's
+	rnd(9):	Adjust entropy collection from polled sources so it's
 		processed sooner. [tls 20141026]
+	viornd(4):	Add driver for VirtIO entropy source available on
+			QEMU, KVM, and Google Compute Engine.  From OpenBSD.
